# DBXS

./: .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  check_example.py  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: cicd.yml
docs/: conf.py  howto.rst  index.rst  introduction.rst
docs/codeexamples/: no_db_yet_userpost.py  userpost.py
requirements/: mypy.txt  mysql.txt  postgres.txt  sphinx.txt  tox-pin-base.txt  tox-tests.txt
src/dbxs/: __init__.py  _access.py  _dbapi_async_aiomysql.py  _dbapi_async_protocols.py  _dbapi_async_psycopg3.py  _dbapi_async_twisted.py  _dbapi_types.py  _testing.py  async_dbapi.py  dbapi.py  dbapi_async.py  testing.py
src/dbxs/adapters/: _dbapi_async_aiomysql.py  _dbapi_async_psycopg3.py  async_mysql.py  async_pool.py  async_psycopg.py  connectable.py  dbapi_twisted.py
src/dbxs/test/: __init__.py  common_adapter_tests.py  test_access.py  test_mysql.py  test_pg.py  test_sync_adapter.py  test_testing.py
